--- a/index.html
+++ b/index.html
@@ -56,19 +56,45 @@
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <link rel="yandex-tableau-widget" href="img/favicon/yandex-browser-manifest.json">
     <!-- #endregion -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <div class="admin">
-        <header class="admin__header"></header>
-        <aside class="admin__aside"></aside>
-        <main class="admin__main"></main>
-        <footer class="admin__footer"></footer>
-    </div>
+    <header class="header_nav">
+        <a href="#" class="logo"><img src="./img/logo.png"><span>Langlearn</span></a>
+    </header>
+    <header class="header_main">
+        <span class="title">Dashboard</span>
+        <span class="date"></span>
+        <a href="#"><i class="fa fa-search"></i></a>
+
+    </header>
+    <header class="header_aside">
+        <span class="title">Logout</span>
+        <a href="#"><i class="fas fa-sign-out-alt"></i></a></header>
+    <nav>
+        welcome back
+    </nav>
+    <main>
+        welcome back
+    </main>
+    <aside>
+        welcome back</aside>
+    <!-- <nav>
+        <a href="#" class="logo"><img src="./img/logo.png"><span>Langlearn</span></a>
+    </nav>
+    <main>
+        <div class="main_header">
+            <span class="title">Dashboard</span>
+            <span class="date"></span>
+            <a href="#"><i class="fa fa-search"></i></a>
+        </div>
+    </main>
+    <aside></aside> -->
+
     <script src="./js/main.js"></script>
 </body>
 
